<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPassword3">

    <ImageView
        android:id="@+id/FPimage"
        android:layout_width="420dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagefp"
        />

    <TextView
        android:id="@+id/CNPtext"
        android:layout_width="400dp"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/createNewPassword"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FPimage" />


    <TextView
        android:id="@+id/CNPtext2"
        android:layout_width="264dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="@string/enterNewPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CNPtext" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_input"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CNPtext2" />

    <EditText
        android:id="@+id/NewPasswordConfirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_input"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/confirmPassowrd"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />


    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custome_button"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordConfirm" />



</androidx.constraintlayout.widget.ConstraintLayout>