<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="loginPage"
    app:cardElevation="8dp"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/signUpTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/singUp"
        android:textColor="@color/main"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="460dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTittle">

        <EditText
            android:id="@+id/fname"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lName"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <Button
            android:id="@+id/btnDateTimePicker"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/dob"
            android:inputType="date"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lName" />

        <EditText
            android:id="@+id/email_sing_up"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDateTimePicker" />

        <EditText
            android:id="@+id/signPassword"
            android:layout_width="300dp"
            android:layout_height="60dp"

            android:layout_marginTop="15dp"
            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sing_up" />

        <EditText
            android:id="@+id/signPasswordConfirm"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"

            android:background="@drawable/border_input"
            android:elevation="20dp"
            android:ems="10"
            android:hint="@string/confirmPassowrd"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/sing_up_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/custome_button"
            android:onClick="signUp"
            android:text="@string/singUp"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="300dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sing_up_button">


            <TextView
                android:id="@+id/alreadyHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haveAccount"
                android:textColor="@color/hint_text"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/labLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logIn"
                android:textColor="@color/grayText"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/alreadyHave"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:onClick="loginPage"
        android:textColor="@color/hint_text"
        android:textSize="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>